openstack-trove (1:5.0.0~rc1-3) UNRELEASED; urgency=medium

  * Added /etc/trove/cloudinit/README file, so that the /etc/trove/cloudinit
    folder stays installed.
  * Added "pkgos_rabbit_read_conf ${CONF} oslo_messaging_rabbit trove" in the
    config script.
  * Sets Neutron as network manager by default, and not nova-network.

 -- Thomas Goirand <zigo@debian.org>  Wed, 30 Mar 2016 10:25:54 +0200

openstack-trove (1:5.0.0~rc1-2) experimental; urgency=medium

  * Do not use Keystone admin auth token to register API endpoints.

 -- Thomas Goirand <zigo@debian.org>  Wed, 30 Mar 2016 08:05:35 +0000

openstack-trove (1:5.0.0~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Added couchdb as build-depends-indep.

 -- Thomas Goirand <zigo@debian.org>  Tue, 22 Mar 2016 14:20:28 +0100

openstack-trove (1:5.0.0~b3-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Fixed homepage (https).
  * Fixed VCS URLs (https).

  [ Thomas Goirand ]
  * New upstream release.
  * Fixed (build-)depends for this release.
  * Refreshed patches.
  * Added (= ${binary:Version}) in all Depends: trove-common.
  * Standards-Version: 3.9.7 (no change).
  * Fixed debian/copyright ordering.
  * Fails build on unit test failure.

 -- Thomas Goirand <zigo@debian.org>  Wed, 09 Mar 2016 10:03:36 +0100

openstack-trove (1:5.0.0~b2-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Redesign running unit tests.
  * Black list:
    - guestagent.test_dbaas.BaseDbStatusTest.test_begin_install
    - guestagent.test_vertica_manager.GuestAgentManagerTest.test_cluster_complete
  * Allow unit tests to fail until this bug is solved:
    - https://bugs.launchpad.net/trove/+bug/1537306

 -- Thomas Goirand <zigo@debian.org>  Thu, 10 Dec 2015 17:42:26 +0100

openstack-trove (1:4.0.0-3) unstable; urgency=medium

  * Added q-text-as-data in depends of trove-api.

 -- Thomas Goirand <zigo@debian.org>  Tue, 03 Nov 2015 11:55:15 +0000
