@@ -13,7 +13,15 @@ if [ "$1" = "configure" ] || [ "$1" = "reconfigure" ] ; then
 	chown trove:trove /var/cache/trove
 
 	pkgos_write_new_conf trove trove.conf
+	pkgos_write_new_conf trove trove-conductor.conf
+	pkgos_write_new_conf trove trove-guestagent.conf
+	pkgos_write_new_conf trove trove-taskmanager.conf
 	pkgos_write_new_conf trove api-paste.ini
+	mkdir -p /etc/trove/conf.d
+	chown trove:trove /etc/trove/conf.d
+	touch /etc/trove/conf.d/guest_info.conf
+	chown trove:trove /etc/trove/conf.d/guest_info.conf
+
 	db_get trove/configure_db
 	if [ "$RET" = "true" ]; then
 		pkgos_dbc_postinst /etc/trove/trove.conf database connection trove $@
