@@ -1,14 +1,0 @@
-#!/bin/sh
-
-set -e
-
-#PKGOS-INCLUDE#
-
-if [ "$1" = "configure" ] || [ "$1" = "reconfigure" ] ; then
-	pkgos_var_user_group trove
-	pkgos_write_new_conf trove trove-conductor.conf
-fi
-
-#DEBHELPER#
-
-exit 0
