@@ -1,10 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "${1}" = "purge" ] ; then
-	rm -f /etc/trove/trove-conductor.conf
-	[ -d /etc/trove ] && rmdir --ignore-fail-on-non-empty /etc/trove
-fi
-
-#DEBHELPER#
