@@ -1,8 +1,0 @@
-/var/log/trove/trove-guestagent.log {
-    daily
-    missingok
-    compress
-    delaycompress
-    notifempty
-    copytruncate
-}
